--- a/Ninjacrab.PersistentWindows.Solution/Ninjacrab.PersistentWindows.WpfShell/Ninjacrab.PersistentWindows.WpfShell.csproj
+++ b/Ninjacrab.PersistentWindows.Solution/Ninjacrab.PersistentWindows.WpfShell/Ninjacrab.PersistentWindows.WpfShell.csproj
@@ -82,11 +82,13 @@
     </ApplicationDefinition>
     <Compile Include="Diagnostics\Log.cs" />
     <Compile Include="Models\ApplicationDisplayMetrics.cs" />
+    <Compile Include="WinApiBridge\CallWindowProcedureParam.cs" />
     <Compile Include="WinApiBridge\Display.cs" />
     <Compile Include="WinApiBridge\MonitorInfo.cs" />
     <Compile Include="WinApiBridge\ShowWindowCommands.cs" />
     <Compile Include="WinApiBridge\User32.cs" />
     <Compile Include="WinApiBridge\WindowPlacement.cs" />
+    <Compile Include="WinApiBridge\WindowsMessage.cs" />
     <Page Include="DiagnosticsView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
