1. One more final change to make sure the icon loads properly and doesn't throw an exception when the diagnostic tool is opened.

--- a/Ninjacrab.PersistentWindows.Solution/Ninjacrab.PersistentWindows.SystrayShell/Ninjacrab.PersistentWindows.SystrayShell.csproj
+++ b/Ninjacrab.PersistentWindows.Solution/Ninjacrab.PersistentWindows.SystrayShell/Ninjacrab.PersistentWindows.SystrayShell.csproj
@@ -100,9 +100,9 @@
       <Link>ManagedWinapiNativeHelper.dll</Link>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
-    <Content Include="..\Resources\Oxygen-Icons.org-Oxygen-Status-media-playlist-repeat.ico">
+    <Resource Include="..\Resources\Oxygen-Icons.org-Oxygen-Status-media-playlist-repeat.ico">
       <Link>Oxygen-Icons.org-Oxygen-Status-media-playlist-repeat.ico</Link>
-    </Content>
+    </Resource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
