--- a/Ninjacrab.PersistentWindows.Solution/Ninjacrab.PersistentWindows.Common/Ninjacrab.PersistentWindows.Common.csproj
+++ b/Ninjacrab.PersistentWindows.Solution/Ninjacrab.PersistentWindows.Common/Ninjacrab.PersistentWindows.Common.csproj
@@ -56,11 +56,12 @@
     <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="ManagedWinapi">
-      <HintPath>..\packages\ManagedWinapi.0.3\ManagedWinapi.dll</HintPath>
-    </Reference>
     <Reference Include="Microsoft.QualityTools.Testing.Fakes, Version=12.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
+    </Reference>
+    <Reference Include="ManagedWinapi">
+        <SpecificVersion>False</SpecificVersion>
+        <HintPath>..\packages\ManagedWinapi.0.3\ManagedWinapi.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
