--- a/Ninjacrab.PersistentWindows.Solution/Ninjacrab.PersistentWindows.WpfShell/packages.config
+++ b/Ninjacrab.PersistentWindows.Solution/Ninjacrab.PersistentWindows.WpfShell/packages.config
@@ -7,4 +7,5 @@
   <package id="Prism.Interactivity" version="5.0.0" targetFramework="net45" />
   <package id="Prism.Mvvm" version="1.1.1" targetFramework="net45" />
   <package id="Prism.PubSubEvents" version="1.1.2" targetFramework="net45" />
+  <package id="ManagedWinapi" version="0.3.0" targetFramework="net45" />
 </packages>
