--- a/Ninjacrab.PersistentWindows.Solution/Ninjacrab.PersistentWindows.Common/Ninjacrab.PersistentWindows.Common.csproj
+++ b/Ninjacrab.PersistentWindows.Solution/Ninjacrab.PersistentWindows.Common/Ninjacrab.PersistentWindows.Common.csproj
@@ -37,11 +37,12 @@
       <SpecificVersion>False</SpecificVersion>
     </Reference>
     <Reference Include="ManagedWinapi">
-        <SpecificVersion>False</SpecificVersion>
-        <HintPath>..\packages\ManagedWinapi.0.3\ManagedWinapi.dll</HintPath>
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\ManagedWinapi.0.3\ManagedWinapi.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
