--- a/Ninjacrab.PersistentWindows.Solution/Ninjacrab.PersistentWindows.Common/Ninjacrab.PersistentWindows.Common.csproj
+++ b/Ninjacrab.PersistentWindows.Solution/Ninjacrab.PersistentWindows.Common/Ninjacrab.PersistentWindows.Common.csproj
@@ -34,8 +34,10 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Windows.Forms" />
+    <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Diagnostics\Log.cs" />
@@ -53,6 +55,12 @@
     </Compile>
     <Compile Include="Models\ApplicationDisplayMetrics.cs" />
     <Compile Include="Models\DesktopDisplayMetrics.cs" />
+    <Compile Include="NameDbKey.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="NameDbKey.Designer.cs">
+      <DependentUpon>NameDbKey.cs</DependentUpon>
+    </Compile>
     <Compile Include="PersistentWindowProcessor.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="WinApiBridge\CallWindowProcedureParam.cs" />
@@ -76,6 +84,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="LaunchProcess.resx">
       <DependentUpon>LaunchProcess.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="NameDbKey.resx">
+      <DependentUpon>NameDbKey.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
