--- a/Ninjacrab.PersistentWindows.Solution/Ninjacrab.PersistentWindows.Common/Ninjacrab.PersistentWindows.Common.csproj
+++ b/Ninjacrab.PersistentWindows.Solution/Ninjacrab.PersistentWindows.Common/Ninjacrab.PersistentWindows.Common.csproj
@@ -8,7 +8,7 @@
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Ninjacrab.PersistentWindows.Common</RootNamespace>
-    <AssemblyName>Ninjacrab.PersistentWindows.Common</AssemblyName>
+    <AssemblyName>PersistentWindows.Common</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
