add script to create auto start task

--- a/Ninjacrab.PersistentWindows.Solution/SystrayShell/SystrayShell.csproj
+++ b/Ninjacrab.PersistentWindows.Solution/SystrayShell/SystrayShell.csproj
@@ -123,6 +123,10 @@
     <None Include="Resources\pwIcon.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <PropertyGroup>
+    <PostBuildEvent>copy $(SolutionDir)*.bat $(TargetDir)
+copy $(SolutionDir)*.ps1 $(TargetDir)</PostBuildEvent>
+  </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
