fix blurred UI by using high DPI awareness setting. Get/Set window position still uses DPI unaware setting

--- a/Ninjacrab.PersistentWindows.Solution/SystrayShell/SystrayShell.csproj
+++ b/Ninjacrab.PersistentWindows.Solution/SystrayShell/SystrayShell.csproj
@@ -52,6 +52,9 @@
   </PropertyGroup>
   <PropertyGroup />
   <PropertyGroup />
+  <PropertyGroup>
+    <ApplicationManifest>app.manifest</ApplicationManifest>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.IO.Compression.FileSystem" />
@@ -91,6 +94,7 @@
       <SubType>Designer</SubType>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+    <None Include="app.manifest" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
