enable restore from disk menu using question mark if no exact db key match is found

--- a/Ninjacrab.PersistentWindows.Solution/SystrayShell/SystrayShell.csproj
+++ b/Ninjacrab.PersistentWindows.Solution/SystrayShell/SystrayShell.csproj
@@ -126,6 +126,9 @@
   <ItemGroup>
     <None Include="Resources\pwIcon.ico" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\question.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PostBuildEvent>copy $(SolutionDir)*.bat $(TargetDir)
